--- a/View/Master/PortalTemplate.html.twig
+++ b/View/Master/PortalTemplate.html.twig
@@ -51,7 +51,7 @@
                         {% endfor %}
                         <li class="nav-item">
                             {% if fsc.user %}
-                            <a class="nav-link" href="{{ constant('FS_ROUTE') }}/">{{ i18n.trans('enter') }}</a>
+                            <a class="nav-link" href="{{ constant('FS_ROUTE') }}/ListWebPage">{{ i18n.trans('enter') }}</a>
                             {% else %}
                             <a class="nav-link" href="#" data-toggle="modal" data-target="#loginModal">{{ i18n.trans('login') }}</a>
                             {% endif %}
