Removed bootstrap, now public view uses spectre.css

--- a/View/Master/PortalTemplate.html.twig
+++ b/View/Master/PortalTemplate.html.twig
@@ -22,7 +22,7 @@
             <link rel="apple-touch-icon" sizes="180x180" href="{{ asset('Dinamic/Assets/Images/apple-icon-180x180.png') }}" />
         {% endblock %}
         {% block css %}
-            <link rel="stylesheet" href="{{ asset('node_modules/bootstrap/dist/css/bootstrap.min.css') }}" />
+            <link rel="stylesheet" href="{{ asset('Plugins/webportal/node_modules/spectre.css/dist/spectre.min.css') }}" />
             <link rel="stylesheet" href="{{ asset('node_modules/font-awesome/css/font-awesome.min.css') }}" />
             <link rel="stylesheet" href="{{ asset('Dinamic/Assets/CSS/webportal.css') }}" />
             {% for block in fsc.pageComposer.getBlocks('css') %}
@@ -32,33 +32,46 @@
     </head>
     <body>
         {% block navbar %}
-            <nav class="navbar navbar-expand-lg sticky-top navbar-light bg-light">
-                <a class="navbar-brand" href="#">
+            <header class="navbar">
+                <section class="navbar-section hide-xs">
+                    {% for menuItem in fsc.getPublicMenu() %}
+                        {% set activeClass = (menuItem.idpage == fsc.webPage.idpage) ? ' active' : '' %}
+                        <a class="btn btn-link{{ activeClass }}" href="{{ menuItem.link() | raw }}">
+                            {{ menuItem.shorttitle }}
+                        </a>
+                    {% endfor %}
+                </section>
+                <section class="navbar-center">
+                    <div class="dropdown show-xs">
+                        <a href="#" class="btn btn-primary dropdown-toggle" tabindex="0">
+                            <i class="fa fa-bars" aria-hidden="true"></i>
+                        </a>
+                        <ul class="menu">
+                            {% for menuItem in fsc.getPublicMenu() %}
+                                {% set activeClass = (menuItem.idpage == fsc.webPage.idpage) ? ' active' : '' %}
+                                <li>
+                                    <a class="btn btn-link{{ activeClass }}" href="{{ menuItem.link() | raw }}">
+                                        {{ menuItem.shorttitle }}
+                                    </a>
+                                </li>
+                            {% endfor %}
+                        </ul>
+                    </div>
                     <img src="{{ asset('Dinamic/Assets/Images/logo.png') }}" width="30" height="30" alt="{{ webTitle }}" />
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mr-auto">
-                        {% for menuItem in fsc.getPublicMenu() %}
-                            {% set activeClass = (menuItem.idpage == fsc.webPage.idpage) ? ' active' : '' %}
-                            <li class="nav-item">
-                                <a class="nav-link{{ activeClass }}" href="{{ menuItem.link() | raw }}">
-                                    {{ menuItem.shorttitle }}
-                                </a>
-                            </li>
-                        {% endfor %}
-                        <li class="nav-item">
-                            {% if fsc.user %}
-                            <a class="nav-link" href="{{ constant('FS_ROUTE') }}/ListWebPage">{{ i18n.trans('enter') }}</a>
-                            {% else %}
-                            <a class="nav-link" href="#" data-toggle="modal" data-target="#loginModal">{{ i18n.trans('login') }}</a>
-                            {% endif %}
-                        </li>
-                    </ul>
-                </div>
-            </nav>
+                </section>
+                <section class="navbar-section">
+                    {% if fsc.user %}
+                        <a class="btn btn-success" href="{{ constant('FS_ROUTE') }}/ListWebPage">
+                            <i class="fa fa-sign-in fa-fw" aria-hidden="true"></i>
+                        </a>
+                    {% else %}
+                        <a class="btn btn-primary" href="#" onclick="$('#loginModal').addClass('active')">
+                            <i class="fa fa-user-circle fa-fw" aria-hidden="true"></i>
+                        </a>
+                    {% endif %}
+                </section>
+            </header>
+            <div class="divider text-center" data-content="{{ webTitle }}"></div>
         {% endblock %}
         {% block messages %}
             <div class="container-fluid">
@@ -82,69 +95,47 @@
         {% endblock %}
         <br/><br/><br/>
         <form action="{{ constant('FS_ROUTE') }}/" method="post" class="form">
-            <div class="modal" id="loginModal" tabindex="-1" role="dialog" aria-hidden="true">
-                <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title">{{ i18n.trans('login') }}</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="modal-body">
+            <div class="modal" id="loginModal">
+                <a href="#close" class="modal-overlay" aria-label="Close"></a>
+                <div class="modal-container">
+                    <div class="modal-header">
+                        <a href="#close" onclick="$('#loginModal').removeClass('active')" class="btn btn-clear float-right" aria-label="Close"></a>
+                        <div class="modal-title h5">{{ i18n.trans('login') }}</div>
+                    </div>
+                    <div class="modal-body">
+                        <div class="content">
                             <div class="form-group">
-                                <div class="input-group">
-                                    <span class="input-group-prepend">
-                                        <span class="input-group-text">
-                                            <i class="fa fa-user fa-fw" aria-hidden="true"></i>
-                                        </span>
-                                    </span>
-                                    <input type="text" name="fsNick" class="form-control" maxlength="50" placeholder="{{ i18n.trans('user') }}" required="" autocomplete="off" autofocus=""/>
-                                </div>
+                                <input type="text" name="fsNick" class="form-control" maxlength="50" placeholder="{{ i18n.trans('user') }}" required="" autocomplete="off"/>
                             </div>
                             <div class="form-group">
-                                <div class="input-group">
-                                    <span class="input-group-prepend">
-                                        <span class="input-group-text">
-                                            <i class="fa fa-key fa-fw" aria-hidden="true"></i>
-                                        </span>
-                                    </span>
-                                    <input type="password" name="fsPassword" class="form-control" maxlength="50" placeholder="{{ i18n.trans('password') }}" required="" autocomplete="off"/>
-                                </div>
+                                <input type="password" name="fsPassword" class="form-control" maxlength="50" placeholder="{{ i18n.trans('password') }}" required="" autocomplete="off"/>
                             </div>
-                            <button type="submit" class="btn btn-block btn-primary">
-                                {{ i18n.trans('login') }}
-                            </button>
                         </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-primary">
+                            {{ i18n.trans('login') }}
+                        </button>
                     </div>
                 </div>
             </div>
         </form>
         {% block footer %}
-            <div class="footer-section bg-secondary text-white">
-                <br/><br/><br/>
-                {% for block in fsc.pageComposer.getBlocks('footer') %}
-                    {{ block.content() | raw }}
-                {% endfor %}
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-sm-8">
-                            {% for key, menuItem in fsc.getPublicFooter() %}
-                                {% if key > 0 %}|{% endif %}
-                                <a href="{{ menuItem.link() | raw }}" class="text-light">{{ menuItem.title }}</a>
-                            {% endfor %}
-                        </div>
-                        <div class="col-md-4 text-right">
-                            <p class="help-block">{{ webCopyright }}</p>
-                        </div>
-                    </div>
+            <div class="footer-section">
+                <div class="divider text-center" data-content="{{ webCopyright }}"></div>
+                <div class="text-center">
+                    {% for block in fsc.pageComposer.getBlocks('footer') %}
+                        {{ block.content() | raw }}
+                    {% endfor %}
+                    {% for key, menuItem in fsc.getPublicFooter() %}
+                        {% if key > 0 %}|{% endif %}
+                        <a href="{{ menuItem.link() | raw }}" class="btn btn-link">{{ menuItem.title }}</a>
+                    {% endfor %}
                 </div>
             </div>
         {% endblock %}
         {% block javascript %}
             <script type="text/javascript" src="{{ asset('node_modules/jquery/dist/jquery.min.js') }}"></script>
-            <script type="text/javascript" src="{{ asset('node_modules/popper.js/dist/umd/popper.min.js') }}"></script>
-            <script type="text/javascript" src="{{ asset('node_modules/bootstrap/dist/js/bootstrap.min.js') }}"></script>
             {% for block in fsc.pageComposer.getBlocks('javascript') %}
                 {{ block.content() | raw }}
             {% endfor %}
