--- a/View/Master/PortalTemplate.html.twig
+++ b/View/Master/PortalTemplate.html.twig
@@ -79,14 +79,14 @@
             <div class="divider text-center" data-content="{{ webTitle }}"></div>
         {% endblock %}
         {% block messages %}
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-sm-12">
-                        {% from 'Macro/Utils.html.twig' import message as show_message %}
-                        {{ show_message(log, ['error', 'critical', 'alert', 'emergency'], 'danger') }}
-                        {{ show_message(log, ['warning'], 'warning') }}
-                        {{ show_message(log, ['notice'], 'success') }}
-                        {{ show_message(log, ['info'], 'info') }}
+            <div class="container grid-lg">
+                <div class="columns">
+                    <div class="col-12">
+                        {% import 'Macro/PortalTemplate.html.twig' as Macros %}
+                        {{ Macros.message(log, ['error', 'critical', 'alert', 'emergency'], 'error') }}
+                        {{ Macros.message(log, ['warning'], 'warning') }}
+                        {{ Macros.message(log, ['notice'], 'success') }}
+                        {{ Macros.message(log, ['info'], 'primary') }}
                     </div>
                 </div>
             </div>
@@ -100,20 +100,31 @@
         {% endblock %}
         <br/><br/><br/>
         <form action="{{ constant('FS_ROUTE') }}/" method="post" class="form">
-            <div class="modal" id="loginModal">
+            <div class="modal modal-sm" id="loginModal">
                 <a href="#close" class="modal-overlay" aria-label="Close"></a>
                 <div class="modal-container">
                     <div class="modal-header">
                         <a href="#close" onclick="$('#loginModal').removeClass('active')" class="btn btn-clear float-right" aria-label="Close"></a>
                         <div class="modal-title h5">{{ i18n.trans('login') }}</div>
+                        <p>{{ i18n.trans('login-text') }}</p>
                     </div>
                     <div class="modal-body">
                         <div class="content">
                             <div class="form-group">
-                                <input type="text" name="fsNick" class="form-control" maxlength="50" placeholder="{{ i18n.trans('user') }}" required="" autocomplete="off"/>
+                                <div class="input-group">
+                                    <span class="input-group-addon">
+                                        <i class="fa fa-user fa-fw" aria-hidden="true"></i>
+                                    </span>
+                                    <input type="text" name="fsNick" class="form-input" maxlength="50" placeholder=" {{ i18n.trans('user') }}" required="" autocomplete="off"/>
+                                </div>
                             </div>
                             <div class="form-group">
-                                <input type="password" name="fsPassword" class="form-control" maxlength="50" placeholder="{{ i18n.trans('password') }}" required="" autocomplete="off"/>
+                                <div class="input-group">
+                                    <span class="input-group-addon">
+                                        <i class="fa fa-key fa-fw" aria-hidden="true"></i>
+                                    </span>
+                                    <input type="password" name="fsPassword" class="form-input" maxlength="50" placeholder=" {{ i18n.trans('password') }}" required="" autocomplete="off"/>
+                                </div>
                             </div>
                         </div>
                     </div>
